--- a/front/src/app/datatables/messages-datatable/messages-datatable.component.html
+++ b/front/src/app/datatables/messages-datatable/messages-datatable.component.html
@@ -1,33 +1,37 @@
 <div class="container" style="margin-top: 10px;">
-    <div class="row">
-        <table class="datatable">
-            <caption>{{totalItems}} Messages</caption>
-            <thead>
-                <tr class="table-header">
-                    <th *ngFor="let column of columns" (click)="sortColumn(column.prop)">
-                        {{column.label}}
-                        <i class="fa-solid {{column.class}}" aria-hidden="true"></i>
-                    </th>
-                </tr>
-            </thead>
-            <tbody [@filterAnimation]="totalItems">
-                <tr *ngFor="let message of rows" (click)="accessToMessage(message)" class="content-tr">
-                    <td>{{ message.createdAt }}</td>
-                    <td>{{ message.content| slice:0:90 }}...</td>
-                    <td>{{ type !== 'inbox' ? message.to : message.from }}</td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="flex-1">
-            <p-paginator 
-                (onPageChange)="onPageChange($event)" 
-                [first]="1" 
-                [rows]="nbItemPerPage" 
-                [totalRecords]="totalItems" 
-                [rowsPerPageOptions]="pageLimitOptions" 
-                [showFirstLastIcon]="true">
-            </p-paginator>
-            </div>
+  <div class="row">
+    <table class="datatable">
+      <caption>{{totalItems}} Messages</caption>
+      <thead>
+        <tr class="table-header">
+          @for (column of columns; track column) {
+            <th (click)="sortColumn(column.prop)">
+              {{column.label}}
+              <i class="fa-solid {{column.class}}" aria-hidden="true"></i>
+            </th>
+          }
+        </tr>
+      </thead>
+      <tbody [@filterAnimation]="totalItems">
+        @for (message of rows; track message) {
+          <tr (click)="accessToMessage(message)" class="content-tr">
+            <td>{{ message.createdAt }}</td>
+            <td>{{ message.content| slice:0:90 }}...</td>
+            <td>{{ type !== 'inbox' ? message.to : message.from }}</td>
+          </tr>
+        }
+      </tbody>
+    </table>
+    <div class="flex-1">
+      <p-paginator
+        (onPageChange)="onPageChange($event)"
+        [first]="1"
+        [rows]="nbItemPerPage"
+        [totalRecords]="totalItems"
+        [rowsPerPageOptions]="pageLimitOptions"
+        [showFirstLastIcon]="true">
+      </p-paginator>
     </div>
+  </div>
 </div>
 <br />
