--- a/front/src/app/recipe/my-recipes/my-recipes.component.html
+++ b/front/src/app/recipe/my-recipes/my-recipes.component.html
@@ -1,5 +1,5 @@
 <div class="container" id="wrapper">
-<app-breadcrumb [items]="breadcrumbMenuItems"></app-breadcrumb>
+  <app-breadcrumb [items]="breadcrumbMenuItems"></app-breadcrumb>
   <div class="row col-12 shadow-sm p-3 mb-0 bg-white rounded mt-5">
     <div class="w-100 text-lg">
       <h3 class="float-start"><i class="pi pi-list"></i> Mes recettes</h3>
@@ -9,7 +9,7 @@
         pRipple
         type="button"
         class="p-button-raised p-button-success float-end"
-      >
+        >
         <i class="pi pi-plus"></i>&nbsp;Créer une recette
       </button>
     </div>
@@ -21,35 +21,40 @@
       >)
     </div>
     <hr />
-    <div
-      id="#cardRecette"
-      class="col-sm-12 col-md-6 col-lg-4 mb-5"
-      *ngFor="let recipe of recipes; let i = index"
-    >
-      <div class="card w-100 mh-100" style="min-height: 474px">
-        <img
-          src="{{ recipe.coverage }}"
-          [ngStyle]="{ 'max-height.px': '190' }"
-          class="card-img-top"
-          alt=""
-        />
-        <div class="card-body">
-          <h5 class="card-title font-weight-bold">
-            {{ recipe.title | slice : 0 : 41 }}<span *ngIf="recipe.title.length > 41">...</span>
-          </h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{ recipe.subtitle| slice : 0 : 60}}<span *ngIf="recipe.subtitle.length > 60">...</span></h6>
-          <p class="card-text">{{ recipe.description | slice : 0 : 85 }}...</p>
-          <hr style="border: 1px dashed rgb(236, 236, 236)" />
-          <strong>Catégorie:</strong> {{ recipe.category }}<br />
-          <strong>Lieu:</strong> {{ getLocality(recipe.locality) }}<br />
-          <strong>Prix:</strong> {{ recipe.price }} €<br />
-          <strong>Statut:</strong> <span class="state-pills {{ recipe.status| filterStatus}}">{{ recipe.status }}</span><br />
-          <div class="tools-btn-recette">
-            <p-speedDial (click)="selectedItemId = recipe.id" class="float-end btn-options" [radius]="120" [model]="items" direction="up-left" type="quarter-circle" buttonClassName="p-button dfm-btn"></p-speedDial>
+    @for (recipe of recipes; track recipe; let i = $index) {
+      <div
+        id="#cardRecette"
+        class="col-sm-12 col-md-6 col-lg-4 mb-5"
+        >
+        <div class="card w-100 mh-100" style="min-height: 474px">
+          <img
+            src="{{ recipe.coverage }}"
+            [ngStyle]="{ 'max-height.px': '190' }"
+            class="card-img-top"
+            alt=""
+            />
+            <div class="card-body">
+              <h5 class="card-title font-weight-bold">
+                {{ recipe.title | slice : 0 : 41 }}@if (recipe.title.length > 41) {
+                <span>...</span>
+              }
+            </h5>
+            <h6 class="card-subtitle mb-2 text-muted">{{ recipe.subtitle| slice : 0 : 60}}@if (recipe.subtitle.length > 60) {
+              <span>...</span>
+            }</h6>
+            <p class="card-text">{{ recipe.description | slice : 0 : 85 }}...</p>
+            <hr style="border: 1px dashed rgb(236, 236, 236)" />
+            <strong>Catégorie:</strong> {{ recipe.category }}<br />
+            <strong>Lieu:</strong> {{ getLocality(recipe.locality) }}<br />
+            <strong>Prix:</strong> {{ recipe.price }} €<br />
+            <strong>Statut:</strong> <span class="state-pills {{ recipe.status| filterStatus}}">{{ recipe.status }}</span><br />
+            <div class="tools-btn-recette">
+              <p-speedDial (click)="selectedItemId = recipe.id" class="float-end btn-options" [radius]="120" [model]="items" direction="up-left" type="quarter-circle" buttonClassName="p-button dfm-btn"></p-speedDial>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    }
   </div>
 </div>
 <app-toast></app-toast>
